jenkins-config/jenkins-ing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - kind: Rule
    match: Host(`ion-cluster.home`) && PathPrefix(`/jenkins`)
    services:
    - name: jenkins-svc
      port: 8080
      namespace: monitoring
    middlewares:     
      - name: stripprefix
        namespace: jenkins
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: jenkins
spec:
  stripPrefix:
    prefixes:
      - "/jenkins"
    forceSlash: false
